--- a/.github/workflows/canvas-sync.yml
+++ b/.github/workflows/canvas-sync.yml
@@ -15,6 +15,7 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - uses: actions/checkout@v3
       
