--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ firebase-debug.log
 firestore-debug.log
 ui-debug.log
 
+# Supabase
+activities/investment-odyssey/js/services/env.js
+
 # Build files
 dist/
 build/
