--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
+    "csv-parser": "^3.2.0",
+    "uui": "^1.0.7",
     "xlsx": "^0.18.5"
   }
 }
