--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "csv-parser": "^3.2.0",
+    "puppeteer": "^24.7.2",
     "uui": "^1.0.7",
     "xlsx": "^0.18.5"
   }
