--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "csv-parser": "^3.2.0",
+    "natural": "^8.0.1",
     "pdfjs-dist": "^5.2.133",
     "puppeteer": "^24.7.2",
     "uui": "^1.0.7",
