Fix GitHub Pages deployment queue issues
- Enhanced deployment workflow with clean options
- Added _config.yml to prevent deployment conflicts
- Configure proper source branch handling to avoid dual deployments

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,3 +66,8 @@ jobs:
           folder: .
           token: ${{ secrets.DEPLOY_TOKEN }}
           branch: gh-pages
+          force: false
+          clean: true
+          clean-exclude: |
+            .git
+            .gitignore
