Switch to official GitHub Pages deployment actions
- Replace JamesIves action with official actions/deploy-pages@v4
- Use actions/configure-pages@v4 and actions/upload-pages-artifact@v3
- Add github-pages environment for proper deployment tracking
- This eliminates the dual deployment issue causing queue conflicts

The official GitHub Actions approach should resolve the recurring
deployment_queued issues by using GitHub's native Pages deployment
mechanism instead of pushing to gh-pages branch.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ concurrency:
 
 jobs:
   build-and-deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -77,17 +80,14 @@ jobs:
           touch .nojekyll
           echo "Deployment preparation complete."
 
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          folder: .
-          token: ${{ secrets.DEPLOY_TOKEN }}
-          branch: gh-pages
-          force: false
-          clean: true
-          clean-exclude: |
-            .git
-            .gitignore
-          single-commit: true
-          git-config-name: github-actions[bot]
-          git-config-email: github-actions[bot]@users.noreply.github.com
+          path: .
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
